3.9.12 - fix jumping

--- a/static/character.css
+++ b/static/character.css
@@ -296,7 +296,7 @@ main {
   row-gap: 0;
 }
 #table-stats-wrap {
-  max-height: 21rem;
+  max-height: 13.5em;
   overflow-y: auto;
   overflow-x: clip;
   scrollbar-width: thin;
